libraries/AdaptiveExpressions/Generated/CommonRegexParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from CommonRegex.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419


#pragma warning disable 3021 // Disable StyleCop warning CS3021 re CLSCompliant attribute in generated files.
#pragma warning disable 0108 // Disable StyleCop warning CS0108, hides inherited member in generated files.

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class CommonRegexParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		Quoted=1, BlockQuoted=2, BellChar=3, ControlChar=4, EscapeChar=5, FormFeed=6, 
		NewLine=7, CarriageReturn=8, Tab=9, Backslash=10, HexChar=11, Dot=12, 
		DecimalDigit=13, NotDecimalDigit=14, CharWithProperty=15, CharWithoutProperty=16, 
		WhiteSpace=17, NotWhiteSpace=18, WordChar=19, NotWordChar=20, CharacterClassStart=21, 
		CharacterClassEnd=22, Caret=23, Hyphen=24, QuestionMark=25, Plus=26, Star=27, 
		OpenBrace=28, CloseBrace=29, Comma=30, EndOfSubject=31, Pipe=32, OpenParen=33, 
		CloseParen=34, LessThan=35, GreaterThan=36, SingleQuote=37, Underscore=38, 
		Colon=39, Hash=40, Equals=41, Exclamation=42, Ampersand=43, ALC=44, BLC=45, 
		CLC=46, DLC=47, ELC=48, FLC=49, GLC=50, HLC=51, ILC=52, JLC=53, KLC=54, 
		LLC=55, MLC=56, NLC=57, OLC=58, PLC=59, QLC=60, RLC=61, SLC=62, TLC=63, 
		ULC=64, VLC=65, WLC=66, XLC=67, YLC=68, ZLC=69, AUC=70, BUC=71, CUC=72, 
		DUC=73, EUC=74, FUC=75, GUC=76, HUC=77, IUC=78, JUC=79, KUC=80, LUC=81, 
		MUC=82, NUC=83, OUC=84, PUC=85, QUC=86, RUC=87, SUC=88, TUC=89, UUC=90, 
		VUC=91, WUC=92, XUC=93, YUC=94, ZUC=95, D1=96, D2=97, D3=98, D4=99, D5=100, 
		D6=101, D7=102, D8=103, D9=104, D0=105, OtherChar=106;
	public const int
		RULE_parse = 0, RULE_alternation = 1, RULE_expr = 2, RULE_element = 3, 
		RULE_quantifier = 4, RULE_quantifier_type = 5, RULE_character_class = 6, 
		RULE_capture = 7, RULE_non_capture = 8, RULE_option = 9, RULE_option_flag = 10, 
		RULE_atom = 11, RULE_cc_atom = 12, RULE_shared_atom = 13, RULE_literal = 14, 
		RULE_cc_literal = 15, RULE_shared_literal = 16, RULE_number = 17, RULE_octal_char = 18, 
		RULE_octal_digit = 19, RULE_digits = 20, RULE_digit = 21, RULE_name = 22, 
		RULE_alpha_nums = 23, RULE_non_close_parens = 24, RULE_non_close_paren = 25, 
		RULE_letter = 26;
	public static readonly string[] ruleNames = {
		"parse", "alternation", "expr", "element", "quantifier", "quantifier_type", 
		"character_class", "capture", "non_capture", "option", "option_flag", 
		"atom", "cc_atom", "shared_atom", "literal", "cc_literal", "shared_literal", 
		"number", "octal_char", "octal_digit", "digits", "digit", "name", "alpha_nums", 
		"non_close_parens", "non_close_paren", "letter"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, "'\\a'", "'\\c'", "'\\e'", "'\\f'", "'\\n'", "'\\r'", 
		"'\\t'", "'\\'", null, "'.'", "'\\d'", "'\\D'", null, null, "'\\s'", "'\\S'", 
		"'\\w'", "'\\W'", "'['", "']'", "'^'", "'-'", "'?'", "'+'", "'*'", "'{'", 
		"'}'", "','", "'$'", "'|'", "'('", "')'", "'<'", "'>'", "'''", "'_'", 
		"':'", "'#'", "'='", "'!'", "'&'", "'a'", "'b'", "'c'", "'d'", "'e'", 
		"'f'", "'g'", "'h'", "'i'", "'j'", "'k'", "'l'", "'m'", "'n'", "'o'", 
		"'p'", "'q'", "'r'", "'s'", "'t'", "'u'", "'v'", "'w'", "'x'", "'y'", 
		"'z'", "'A'", "'B'", "'C'", "'D'", "'E'", "'F'", "'G'", "'H'", "'I'", 
		"'J'", "'K'", "'L'", "'M'", "'N'", "'O'", "'P'", "'Q'", "'R'", "'S'", 
		"'T'", "'U'", "'V'", "'W'", "'X'", "'Y'", "'Z'", "'1'", "'2'", "'3'", 
		"'4'", "'5'", "'6'", "'7'", "'8'", "'9'", "'0'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "Quoted", "BlockQuoted", "BellChar", "ControlChar", "EscapeChar", 
		"FormFeed", "NewLine", "CarriageReturn", "Tab", "Backslash", "HexChar", 
		"Dot", "DecimalDigit", "NotDecimalDigit", "CharWithProperty", "CharWithoutProperty", 
		"WhiteSpace", "NotWhiteSpace", "WordChar", "NotWordChar", "CharacterClassStart", 
		"CharacterClassEnd", "Caret", "Hyphen", "QuestionMark", "Plus", "Star", 
		"OpenBrace", "CloseBrace", "Comma", "EndOfSubject", "Pipe", "OpenParen", 
		"CloseParen", "LessThan", "GreaterThan", "SingleQuote", "Underscore", 
		"Colon", "Hash", "Equals", "Exclamation", "Ampersand", "ALC", "BLC", "CLC", 
		"DLC", "ELC", "FLC", "GLC", "HLC", "ILC", "JLC", "KLC", "LLC", "MLC", 
		"NLC", "OLC", "PLC", "QLC", "RLC", "SLC", "TLC", "ULC", "VLC", "WLC", 
		"XLC", "YLC", "ZLC", "AUC", "BUC", "CUC", "DUC", "EUC", "FUC", "GUC", 
		"HUC", "IUC", "JUC", "KUC", "LUC", "MUC", "NUC", "OUC", "PUC", "QUC", 
		"RUC", "SUC", "TUC", "UUC", "VUC", "WUC", "XUC", "YUC", "ZUC", "D1", "D2", 
		"D3", "D4", "D5", "D6", "D7", "D8", "D9", "D0", "OtherChar"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "CommonRegex.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static CommonRegexParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public CommonRegexParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public CommonRegexParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ParseContext : ParserRuleContext {
		public AlternationContext alternation() {
			return GetRuleContext<AlternationContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(CommonRegexParser.Eof, 0); }
		public ParseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parse; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICommonRegexListener typedListener = listener as ICommonRegexListener;
			if (typedListener != null) typedListener.EnterParse(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICommonRegexListener typedListener = listener as ICommonRegexListener;
			if (typedListener != null) typedListener.ExitParse(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICommonRegexVisitor<TResult> typedVisitor = visitor as ICommonRegexVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParse(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParseContext parse() {
		ParseContext _localctx = new ParseContext(Context, State);
		EnterRule(_localctx, 0, RULE_parse);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 54; alternation();
			State = 55; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AlternationContext : ParserRuleContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode[] Pipe() { return GetTokens(CommonRegexParser.Pipe); }
		public ITerminalNode Pipe(int i) {
			return GetToken(CommonRegexParser.Pipe, i);
		}
		public AlternationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_alternation; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICommonRegexListener typedListener = listener as ICommonRegexListener;
			if (typedListener != null) typedListener.EnterAlternation(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICommonRegexListener typedListener = listener as ICommonRegexListener;
			if (typedListener != null) typedListener.ExitAlternation(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICommonRegexVisitor<TResult> typedVisitor = visitor as ICommonRegexVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAlternation(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AlternationContext alternation() {
		AlternationContext _localctx = new AlternationContext(Context, State);
		EnterRule(_localctx, 2, RULE_alternation);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 57; expr();
			State = 62;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Pipe) {
				{
				{
				State = 58; Match(Pipe);
				State = 59; expr();
				}
				}
				State = 64;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		public ElementContext[] element() {
			return GetRuleContexts<ElementContext>();
		}
		public ElementContext element(int i) {
			return GetRuleContext<ElementContext>(i);
		}
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICommonRegexListener typedListener = listener as ICommonRegexListener;
			if (typedListener != null) typedListener.EnterExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICommonRegexListener typedListener = listener as ICommonRegexListener;
			if (typedListener != null) typedListener.ExitExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICommonRegexVisitor<TResult> typedVisitor = visitor as ICommonRegexVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprContext expr() {
		ExprContext _localctx = new ExprContext(Context, State);
		EnterRule(_localctx, 4, RULE_expr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 68;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Quoted) | (1L << BlockQuoted) | (1L << BellChar) | (1L << ControlChar) | (1L << EscapeChar) | (1L << FormFeed) | (1L << NewLine) | (1L << CarriageReturn) | (1L << Tab) | (1L << Backslash) | (1L << HexChar) | (1L << Dot) | (1L << DecimalDigit) | (1L << NotDecimalDigit) | (1L << CharWithProperty) | (1L << CharWithoutProperty) | (1L << WhiteSpace) | (1L << NotWhiteSpace) | (1L << WordChar) | (1L << NotWordChar) | (1L << CharacterClassStart) | (1L << CharacterClassEnd) | (1L << Caret) | (1L << Hyphen) | (1L << OpenBrace) | (1L << CloseBrace) | (1L << Comma) | (1L << EndOfSubject) | (1L << OpenParen) | (1L << LessThan) | (1L << GreaterThan) | (1L << SingleQuote) | (1L << Underscore) | (1L << Colon) | (1L << Hash) | (1L << Equals) | (1L << Exclamation) | (1L << Ampersand) | (1L << ALC) | (1L << BLC) | (1L << CLC) | (1L << DLC) | (1L << ELC) | (1L << FLC) | (1L << GLC) | (1L << HLC) | (1L << ILC) | (1L << JLC) | (1L << KLC) | (1L << LLC) | (1L << MLC) | (1L << NLC) | (1L << OLC) | (1L << PLC) | (1L << QLC) | (1L << RLC) | (1L << SLC) | (1L << TLC))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (ULC - 64)) | (1L << (VLC - 64)) | (1L << (WLC - 64)) | (1L << (XLC - 64)) | (1L << (YLC - 64)) | (1L << (ZLC - 64)) | (1L << (AUC - 64)) | (1L << (BUC - 64)) | (1L << (CUC - 64)) | (1L << (DUC - 64)) | (1L << (EUC - 64)) | (1L << (FUC - 64)) | (1L << (GUC - 64)) | (1L << (HUC - 64)) | (1L << (IUC - 64)) | (1L << (JUC - 64)) | (1L << (KUC - 64)) | (1L << (LUC - 64)) | (1L << (MUC - 64)) | (1L << (NUC - 64)) | (1L << (OUC - 64)) | (1L << (PUC - 64)) | (1L << (QUC - 64)) | (1L << (RUC - 64)) | (1L << (SUC - 64)) | (1L << (TUC - 64)) | (1L << (UUC - 64)) | (1L << (VUC - 64)) | (1L << (WUC - 64)) | (1L << (XUC - 64)) | (1L << (YUC - 64)) | (1L << (ZUC - 64)) | (1L << (D1 - 64)) | (1L << (D2 - 64)) | (1L << (D3 - 64)) | (1L << (D4 - 64)) | (1L << (D5 - 64)) | (1L << (D6 - 64)) | (1L << (D7 - 64)) | (1L << (D8 - 64)) | (1L << (D9 - 64)) | (1L << (D0 - 64)) | (1L << (OtherChar - 64)))) != 0)) {
				{
				{
				State = 65; element();
				}
				}
				State = 70;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElementContext : ParserRuleContext {
		public AtomContext atom() {
			return GetRuleContext<AtomContext>(0);
		}
		public QuantifierContext quantifier() {
			return GetRuleContext<QuantifierContext>(0);
		}
		public ElementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_element; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICommonRegexListener typedListener = listener as ICommonRegexListener;
			if (typedListener != null) typedListener.EnterElement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICommonRegexListener typedListener = listener as ICommonRegexListener;
			if (typedListener != null) typedListener.ExitElement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICommonRegexVisitor<TResult> typedVisitor = visitor as ICommonRegexVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitElement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ElementContext element() {
		ElementContext _localctx = new ElementContext(Context, State);
		EnterRule(_localctx, 6, RULE_element);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 71; atom();
			State = 73;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				{
				State = 72; quantifier();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QuantifierContext : ParserRuleContext {
		public ITerminalNode QuestionMark() { return GetToken(CommonRegexParser.QuestionMark, 0); }
		public Quantifier_typeContext quantifier_type() {
			return GetRuleContext<Quantifier_typeContext>(0);
		}
		public ITerminalNode Plus() { return GetToken(CommonRegexParser.Plus, 0); }
		public ITerminalNode Star() { return GetToken(CommonRegexParser.Star, 0); }
		public ITerminalNode OpenBrace() { return GetToken(CommonRegexParser.OpenBrace, 0); }
		public NumberContext[] number() {
			return GetRuleContexts<NumberContext>();
		}
		public NumberContext number(int i) {
			return GetRuleContext<NumberContext>(i);
		}
		public ITerminalNode CloseBrace() { return GetToken(CommonRegexParser.CloseBrace, 0); }
		public ITerminalNode Comma() { return GetToken(CommonRegexParser.Comma, 0); }
		public QuantifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_quantifier; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICommonRegexListener typedListener = listener as ICommonRegexListener;
			if (typedListener != null) typedListener.EnterQuantifier(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICommonRegexListener typedListener = listener as ICommonRegexListener;
			if (typedListener != null) typedListener.ExitQuantifier(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICommonRegexVisitor<TResult> typedVisitor = visitor as ICommonRegexVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQuantifier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QuantifierContext quantifier() {
		QuantifierContext _localctx = new QuantifierContext(Context, State);
		EnterRule(_localctx, 8, RULE_quantifier);
		try {
			State = 99;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 75; Match(QuestionMark);
				State = 76; quantifier_type();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 77; Match(Plus);
				State = 78; quantifier_type();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 79; Match(Star);
				State = 80; quantifier_type();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 81; Match(OpenBrace);
				State = 82; number();
				State = 83; Match(CloseBrace);
				State = 84; quantifier_type();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 86; Match(OpenBrace);
				State = 87; number();
				State = 88; Match(Comma);
				State = 89; Match(CloseBrace);
				State = 90; quantifier_type();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 92; Match(OpenBrace);
				State = 93; number();
				State = 94; Match(Comma);
				State = 95; number();
				State = 96; Match(CloseBrace);
				State = 97; quantifier_type();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Quantifier_typeContext : ParserRuleContext {
		public ITerminalNode Plus() { return GetToken(CommonRegexParser.Plus, 0); }
		public ITerminalNode QuestionMark() { return GetToken(CommonRegexParser.QuestionMark, 0); }
		public Quantifier_typeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_quantifier_type; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICommonRegexListener typedListener = listener as ICommonRegexListener;
			if (typedListener != null) typedListener.EnterQuantifier_type(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICommonRegexListener typedListener = listener as ICommonRegexListener;
			if (typedListener != null) typedListener.ExitQuantifier_type(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICommonRegexVisitor<TResult> typedVisitor = visitor as ICommonRegexVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQuantifier_type(this);
			else return visitor.VisitChildren(this);
		}
	}
